--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -4,6 +4,7 @@ $third-color : #3B9655;
 $fourth-color : #F0BD5F;
 $fifth-color : #DCE5DC;
 $sixth-color : #ECECEC;
+$grey-color : #BDBCBC;
 
 $primary-font: 'Avenir Next';
 $secondary-font : 'Century Gothic';
