Create a JsonResponse to find all models of a brand

--- a/templates/estimation/index.html.twig
+++ b/templates/estimation/index.html.twig
@@ -23,7 +23,7 @@
                     </div>
                     {% for brand in brands %}
                         <div class="col mx-auto text-center p-1">
-                    <a class="grey-button" href="{{ path('estimation_brand', {'brand':brand}) }}">{{ brand }}</a>
+                    <p class="grey-button brand" id="{{ brand.brand }}" href="{{ path('estimation_brand', {'brand':brand.brand}) }}">{{ brand.brand }}</p>
                         </div>
                     {% endfor %}
                 </div>
@@ -34,14 +34,14 @@
                 </div>
             </section>
 
-            <section class="model">
+            <section id="model" style="display:none;">
                 <div class="row">
                     <div class="col-12 text-center p-5">
                         <span class="estim-round-bubble">Quel est le modèle&#8239;?</span>
                     </div>
-                    {% for brand in brands %}
+                    {% for model in models %}
                         <div class="col mx-auto text-center p-1">
-                            <a class="grey-button" href="{{ path('estimation_brand', {'brand':brand}) }}">{{ brand }}</a>
+                            <a class="grey-button" href="{{ path('estimation_brand', {'brand':model.model}) }}">{{ model.model }}</a>
                         </div>
                     {% endfor %}
                 </div>
@@ -54,4 +54,29 @@
 
         </div>
     </div>
+{% endblock %}
+
+{%  block javascripts %}
+    <script src=
+            "https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
+    </script>
+    <script>
+        // au clic sur une marque ça lance le processus
+        $('.brand').click(function(){
+        const brand = $(this).attr('id');
+        // et ça lance
+        $.ajax({
+            type: "POST",
+            url: "{{ path('model_id') }}",
+            data: {brand: brand},
+            success : function(data){
+                console.log(data);
+                const models = data;
+                // et ça show le modele
+                $('#model').show();
+                // $('#model').load("{{ path('new_estimation') }}",models);
+            },
+        });
+        });
+    </script>
 {% endblock %}
