Adjust lateral bars in lg screen

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
     </head>
     <body>
     <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col col-lg-8 bg-white">
     {% block header %}
         <header>
             <div class="row pb-3 bg-white">
@@ -165,6 +167,8 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
         {% endblock %}
+            </div>
+        </div>
     </div>
     </body>
 
