--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -352,30 +352,11 @@ header{
             }
         }
 
-        @media screen and (min-width: 768px) {
+        @include media-breakpoint-up(sm) {
 
             #menu-burger {
-                align-self: flex-start;
-                border-radius: 5px;
-                background-color : $primary-color;
-                box-shadow: 5px 3px 10px $primary-color;
-                width: 120px;
-                min-height: 40px;
-                height: 40px;
-                position: absolute;
-                top: 30px;
-                right: 50px;
-
-                img {
-                    display: none;
-                }
-
-                p{
-                    display: inline;
-                    font-size : 1.1rem;
-                    color : white;
-                    margin-bottom : 0;
-                }
+                right: 5%;
+                top: 5%;
             }
         }
 
