--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,18 +128,18 @@
         {% block footer %}
         <footer>
             <h2 class="primary-title">Tu en veux plus ?</h2>
-            <div class="row justify-content-center mb-4">
-                <div class="col-2 col-md-1 text-center">
+            <div class="d-flex flex-row justify-content-center mt-2 mb-4">
+                <div class="col-2 col-md-1 ml-4 mr-5 text-center">
                     <a href="#" target="_blank" title="Page Facebook">
                         <img src="{{ asset('images/logo-fb.png') }}" alt="Page Facebook" class="social-networks" />
                     </a>
                 </div>
-                <div class="col-2 col-md-1 text-center">
+                <div class="col-2 col-md-1 ml-4 mr-5 text-center">
                     <a href="#" target="_blank" title="Instagram">
                         <img src="{{ asset('images/logo-insta.png') }}" alt="Instagram" class="social-networks" />
                     </a>
                 </div>
-                <div class="col-2 col-md-1 text-center">
+                <div class="col-2 col-md-1 ml-4 mr-5 text-center">
                     <a href="#" target="_blank" title="LinkedIn">
                         <img src="{{ asset('images/logo-linkedin.png') }}" alt="LinkedIn" class="social-networks" />
                     </a>
