--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -486,8 +486,12 @@ header{
 
 footer {
     .social-networks {
-        max-width: 90%;
-        height: auto;
+        max-width: 100%;
+        max-height: 100%;
+        img{
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .links-footer {
